--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -11,5 +11,9 @@
         "Default": "Warning"
       }
     }
+  },
+  "SendGridApiKey": "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",
+  "Emails": {
+    "KidsCodeAdmin": "uchitha.r@gmail.com"
   }
 }
