Multiple admin email support

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -12,8 +12,8 @@
       }
     }
   },
-  "SendGridApiKey": "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",
+  "SendGridApiKey": "",
   "Emails": {
-    "KidsCodeAdmin": "uchitha.r@gmail.com"
+    "KidsCodeAdmin": "uchitha.r@gmail.com, nilakshia@live.com"
   }
 }
