--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -3,16 +3,17 @@
     "IncludeScopes": false,
     "Debug": {
       "LogLevel": {
-        "Default": "Warning"
+        "Default": "Debug"
       }
     },
     "Console": {
       "LogLevel": {
-        "Default": "Warning"
+        "Default": "Debug"
       }
     }
   },
   "SendGridApiKey": "",
+  "AllowedOrigins": ["http://localhost:8000", "http://kidscode.azurewebsites.net","http://aussiekidscode.com.au"], 
   "Emails": {
     "KidsCodeAdmin": "uchitha.r@gmail.com, nilakshia@live.com"
   }
